# mcp-youtube-transcript

./: .dockerignore  .mcpbignore  .pre-commit-config.yaml  README.md  manifest.json  pyproject.toml  server.json
.github/workflows/: release.yml
src/mcp_youtube_transcript/: __init__.py  cli.py  server.py
tests/: test_mcp.py  test_server.py
